# vinc

./: .gitignore
documentacion-de-apoyo/: e2e.md
recursos/formularios html/: forms_integrados.html
vinc-chatbot/: load-env.sh  vinc-chatbot.cabal
vinc-chatbot/app/: Main.hs
vinc-chatbot/app/Api/: Schema.hs
vinc-chatbot/app/Bot/: Core.hs  OpenAI.hs
vinc-chatbot/app/Database/: Neo4j.hs
vinc-chatbot/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
