cabal-version:      3.0
name:               vinc-chatbot
version:            0.1.0.0
synopsis:           Chatbot informativo para VINC 8% 2024
description:        Chatbot web para asistir en la rendición de cuentas del concurso VINC 8% 2024
license:            BSD-3-Clause
author:             Gobierno Regional de Ñuble
maintainer:         soporte@goredenuble.cl
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable vinc-chatbot
    import:           warnings
    main-is:          Main.hs
    other-modules:    Bot.Core
                    , Bot.OpenAI
                    , Database.Neo4j
                    , Api.Schema
    build-depends:    base ^>=4.16.4.0
                    , scotty
                    , aeson
                    , text
                    , wai-cors
                    , warp
                    , morpheus-graphql
                    , hasbolt
                    , openai-hs
                    , bytestring
                    , containers
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded 